Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87801

qmake shell wrapper doesn't handle -install qinstall command properly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 6.0
    • Build System: CMake
    • cross-compiled Qt

    Description

      /home/alex/Dev/qt/qt5_cmake/qtbase_built_armv7/installed/bin/qmake -install qinstall a.txt b.txt
      
      Error: usage: [-exe] source target
      
      /home/alex/Dev/qt/qt5_cmake/qtbase_built_armv7/installed/bin/qmake -install qinstall
      
      Error copying -qtconf to /home/alex/Dev/qt/qt5_cmake/qtbase_built_armv7/installed/bin/target_qt.conf: Cannot open -qtconf for input
      

      The content of the shell wrapper is

      /home/alex/Dev/qt/qt5_cmake/qtbase_built_developer/bin/qmake $* -qtconf "$script_dir_path/target_qt.conf"
      

      I presume the issue is due to the -qtconf parameter at the end

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-87801
          # Subject Branch Project Status CR V

          Activity

            People

              jbornema Joerg Bornemann
              alexandru.croitor Alexandru Croitor
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes